--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,83 +1,34 @@
-name: Run android tests in github runner
+# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
+# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-on: push
+name: Maven Package
 
-permissions:
-    contents: read
-    pull-requests: write
+on:
+  release:
+    types: [created]
 
-concurrency: 
-    group: screenshot-test-${{ github.head_ref || github.run_id }}
-    cancel-in-progress: true
-  
 jobs:
-  test:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        api-level: [27]
+  build:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-          
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-      - run: |
-            npm install -g appium@v2.1.3
-            appium -v
-            appium &>/dev/null &
-      - name: Install scrcpy on macOS
-        run: |
-          brew install scrcpy
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-      - name: Install UIA2 driver
-        run: appium driver install uiautomator2
-       
-      - name: AVD cache
-        uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3
-        id: avd-cache
-        with:
-          path: |
-              ~/.android/avd/*
-              ~/.android/adb*
-          key: avd-${{ matrix.api-level }}
-      
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
-      - name: create AVD and generate snapshot for caching
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@d94c3fbe4fe6a29e4a5ba47c12fb47677c73656b # v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          force-avd-creation: false
-          arch: x86
-          sdcard-path-or-size: 100M
-          target: google_apis
-          script: echo "Generated AVD snapshot for caching."
-
-      - name: run android tests
-        uses: reactivecircus/android-emulator-runner@d94c3fbe4fe6a29e4a5ba47c12fb47677c73656b # v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          force-avd-creation: false
-          arch: x86
-          target: google_apis
-          emulator-options: -no-snapshot -delay-adb
-          script: |
-                scrcpy --record output.mp4 &
-                RECORDING_PID=$!
-                mvn clean test -Pandroid 
-                kill $RECORDING_PID
-
-          
-      - name: Publish Video
-        uses: actions/upload-artifact@v2
-        with:
-          name: output.mp4
-          path: output.mp4
+    - name: Publish to GitHub Packages Apache Maven
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
