--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,62 +1,99 @@
-name: Run android tests in github runner
+# name: Run android tests in github runner
 
-on: push
+# on: push
   
+# jobs:
+#   test:
+#     runs-on: macos-latest
+#     strategy:
+#       matrix:
+#         api-level: [25]
+#     steps:
+#       - name: checkout
+#         uses: actions/checkout@v2
+        
+#       - name: Set up JDK 1.11
+#         uses: actions/setup-java@v1
+#         with:
+#           java-version: 11
+          
+#       - uses: actions/setup-node@v2
+#         with:
+#           node-version: '18'
+#       - run: |
+#             npm install -g appium@v2.1.3
+#             appium -v
+#             appium driver install uiautomator2
+#             appium &>/dev/null &
+       
+#       - name: AVD cache
+#         uses: actions/cache@v2
+#         id: avd-cache
+#         with:
+#           path: |
+#             ~/.android/avd/*
+#             ~/.android/adb*
+#           key: avd-${{ matrix.api-level }}
+
+#       - name: create AVD and generate snapshot for caching
+#         if: steps.avd-cache.outputs.cache-hit != 'true'
+#         uses: reactivecircus/android-emulator-runner@v2
+#         with:
+#           api-level: ${{ matrix.api-level }}
+#           force-avd-creation: false
+#           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+#           disable-animations: false
+#           script: echo "Generated AVD snapshot for caching."
+
+#       - name: run android tests
+#         uses: reactivecircus/android-emulator-runner@v2
+#         with:
+#           api-level: ${{ matrix.api-level }}
+#           force-avd-creation: false
+#           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+#           disable-animations: true
+#           script:  mvn --batch-mode --update-snapshots package
+
+
+#       - name: Upload Appium logs
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: appium-logs
+#           path: build.log
+
+name: Appium CI
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
+
 jobs:
-  test:
-    runs-on: macos-latest
+  ui-tests:
     strategy:
       matrix:
-        api-level: [25]
+        api-level: [28]
+        target: [default]
+    runs-on: macos-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-          
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-      - run: |
-            npm install -g appium@v2.1.3
-            appium -v
-            appium driver install uiautomator2
-            appium &>/dev/null &
-       
-      - name: AVD cache
-        uses: actions/cache@v2
-        id: avd-cache
-        with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-${{ matrix.api-level }}
-
-      - name: create AVD and generate snapshot for caching
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          script: echo "Generated AVD snapshot for caching."
-
-      - name: run android tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          force-avd-creation: false
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: true
-          script:  mvn --batch-mode --update-snapshots package
-
-
-      - name: Upload Appium logs
-        uses: actions/upload-artifact@v2
-        with:
-          name: appium-logs
-          path: build.log
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3.6.0
+      with:
+        distribution: 'temurin'
+        java-version: 11
+        cache: 'gradle'
+    - name: Install the Emulator
+      run: |
+        chmod +x ./scripts/RunAppiumServer.sh
+        ./scripts/RunAppiumServer.sh
+      shell: bash   
+    - name: Run Appium Tests
+      uses: reactivecircus/android-emulator-runner@v2.27.0
+      with:
+        api-level: ${{ matrix.api-level }}
+        target: ${{ matrix.target }}
+        arch: x86_64
+        profile: Nexus 6
+        script: mvn --batch-mode --update-snapshots package
