--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -96,3 +96,9 @@ jobs:
         arch: x86_64
         profile: Nexus 6
         script: mvn --batch-mode --update-snapshots package
+
+    - name: Upload Appium logs
+      uses: actions/upload-artifact@v2
+      with:
+          name: appium-logs
+          path: appium.log
