--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -87,7 +87,12 @@ jobs:
       run: |
         chmod +x ./scripts/RunAppiumServer.sh
         ./scripts/RunAppiumServer.sh
-      shell: bash   
+      shell: bash
+
+    - name: Install scrcpy on macOS
+      run: |
+        brew install scrcpy
+
     - name: Run Appium Tests
       uses: reactivecircus/android-emulator-runner@v2.27.0
       with:
@@ -95,10 +100,21 @@ jobs:
         target: ${{ matrix.target }}
         arch: x86_64
         profile: Nexus 6
-        script: mvn --batch-mode --update-snapshots package
+        script: |
+          scrcpy --record output.mp4 &
+          RECORDING_PID=$!
+
+          mvn --batch-mode --update-snapshots package
+          kill $RECORDING_PID
 
     - name: Upload Appium logs
       uses: actions/upload-artifact@v2
       with:
           name: appium-logs
           path: appium.log
+
+    - name: Publish Video
+      uses: actions/upload-artifact@v2
+      with:
+          name: output.mp4
+          path: output.mp4
